[project]
name = "aiautomatedarticleposting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.38.0",
    "logging>=0.4.9.6",
    "openai>=1.107.2",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "schedule>=1.2.2",
]
