[project]
name = "aiautomatedarticleposting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-genai>=1.38.0",
    "logging>=0.4.9.6",
    "numpy>=2.3.3",
    "openai>=1.107.2",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "psutil>=7.1.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]
